# j-file-kit

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MIGRATION_REVIEW.md  README.md  REVIEW_REPORT.md  docker-compose.yml  entrypoint.sh  justfile  main.py  pyproject.toml
.cursor/commands/: code-review.md  docs-refresh.md  fix-and-commit.md  fix-pre-commit.md  plan-2-create.md  plan-3-refine.md  plan-create.md  plan-discussion.md  plan-execution-review.md  review-architecture.md  review-code.md  review-global-spec.md  review-plan-result.md  test-unit.md  unit-test.md
.cursor/plans/: -----------b4d09859.plan.md
.cursor/rules/: frontend-project.mdc  python-project.mdc
.github/workflows/: docker.yml
configs/: task_config.yaml  task_config.yaml.example
docs/: ARCHITECTURE.md  CONFIG_AND_LOGGING.md  FE-M1.md  FE-M2.md  FE-M3.md  FE-M4.md  FE-M5.md  FE-M6.md  FE-M7.md  FE-M8.md  FRONTEND_DESIGN.md  JAV_VIDEO_PROCESSING_PIPELINE.md  RAW_FILE_PROCESSING_PIPELINE.md
examples/: multiple_scan_roots.py
frontend/: biome.json  index.html  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/__tests__/: configPage.test.tsx  dashboardPage.test.tsx  routes.test.tsx  taskDetailPage.test.tsx  taskDetailSearchParams.test.ts  tasksListPage.test.tsx  tasksListPageHelpers.test.ts
frontend/src/api/: client.ts  config.ts  media.ts  system.ts  tasks.ts  types.ts
frontend/src/components/config/: ConfigFormPrimitives.tsx  JavConfigPanel.tsx  MediaPickerDialog.tsx  PathInput.tsx  RawConfigPanel.tsx  StemTagsInput.tsx  TaskConfigPanel.tsx
frontend/src/components/layout/: AppShell.tsx  GlobalRunBanner.tsx  TopNav.tsx
frontend/src/components/system/: SystemDefaultsPanel.tsx  SystemInfoPanel.tsx
frontend/src/components/task/: DryRunBadge.tsx  LogPagination.tsx  LogViewer.tsx  NewTaskPanel.tsx  QuickLinks.tsx  RawPhaseStats.tsx  RecentRunsList.tsx  ResultFilterBar.tsx  ResultTable.tsx  RunActions.tsx  RunFilterBar.tsx  RunHeader.tsx  RunPagination.tsx  RunRowActions.tsx  RunTable.tsx  RunTimeline.tsx  StartTaskCard.tsx  StatsSummaryGrid.tsx  StatusBadge.tsx  TaskTypeBadge.tsx
frontend/src/lib/: errors.ts  paths.ts  task-config.ts  task-labels.ts  time.ts
frontend/src/pages/: ConfigPage.tsx  DashboardPage.tsx  MediaPage.tsx  TaskDetailPage.tsx  TasksListPage.tsx  TasksPage.tsx  taskDetailSearchParams.ts
frontend/src/test/: server.ts  setup.ts  utils.tsx
jfk/: __init__.py
jfk/core/: config.py  pipeline.py  processor.py  scanner.py
jfk/processors/: __init__.py  analyzers.py  executors.py  finalizers.py
jfk/rules/: __init__.py  video_organizer.py
jfk/utils/: __init__.py  file_utils.py  filename_generation.py  logger.py  progress.py  regex_patterns.py  transaction_log.py  transaction_rollback.py
scripts/: collect_vr_jav_prefixes.py  gen_test_files.py
src/j_file_kit/: __init__.py  main.py
src/j_file_kit/api/: __init__.py  app.py  app_state.py  config_routes.py  models.py  routes.py
src/j_file_kit/app/: __init__.py
src/j_file_kit/app/app_config/: __init__.py  api.py  (+1 more)
src/j_file_kit/core/: __init__.py  app_state.py  config.py  db.py  models.py  pipeline.py  processor.py  scanner.py  task.py  task_manager.py
src/j_file_kit/domain/: __init__.py  models.py  processor.py  task.py
src/j_file_kit/infrastructure/: __init__.py  app_state.py
src/j_file_kit/interfaces/: __init__.py  repositories.py  task.py
src/j_file_kit/models/: __init__.py  config.py  contexts.py  enums.py  exceptions.py  operations.py  path_entry.py  path_item.py  results.py  task.py  value_objects.py
src/j_file_kit/processors/: analyzers.py  executors.py  finalizers.py
src/j_file_kit/rules/: video_organizer.py
src/j_file_kit/services/: __init__.py  config_service.py  jav_video_organizer.py  pipeline.py  scanner.py  task_manager.py  video_organizer.py
src/j_file_kit/shared/: __init__.py  constants.py
src/j_file_kit/tasks/: __init__.py  video_organizer.py
src/j_file_kit/utils/: __init__.py  config_utils.py  file_utils.py  filename_generation.py  jav_utils.py  logger.py  progress.py  regex_patterns.py  transaction_log.py
tests/: conftest.py
tests/api/: conftest.py  test_config_api.py  test_file_task_api.py  test_system_api.py
tests/app/file_task/: conftest.py
tests/app/media_browser/: test_media_browser_api.py
tests/e2e/: conftest.py  test_jav_video_organizer_e2e.py  test_raw_file_organizer_e2e.py
tests/fixtures/: __init__.py  files.py  mocks.py  models.py
tests/infrastructure/: conftest.py
tests/infrastructure/config/: test_config_loader.py  test_config_manager.py  test_default_task_config_initializer.py  test_global_config_manager.py  test_task_config_manager.py
tests/infrastructure/file_task/: test_file_task_manager.py  test_file_task_run_manager.py
tests/infrastructure/task/: test_task_manager.py
tests/integration/: test_end_to_end.py  test_pipeline.py  test_processors.py
tests/shared/utils/: test_file_utils.py  test_logging.py  test_name_keyword_match.py
tests/unit/: test_config.py  test_file_utils.py  test_filename_generation.py  test_logger.py  test_models.py  test_progress.py  test_regex_patterns.py
tests/unit/core/: __init__.py  test_config.py  test_models.py
tests/unit/utils/: __init__.py  test_config_utils.py  test_file_utils.py  test_filename_generation.py  test_jav_utils.py  test_logger.py  test_progress.py  test_regex_patterns.py  test_transaction_log.py
unraid/: j-file-kit.xml
(+338 files in other folders)
