[project]
name = "j-file-kit"
version = "0.1.0"
description = "基于 Python 的文件管理工具，支持自定义规则的文件操作"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.10",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "faker>=20.0",
    "types-PyYAML>=6.0",
    "pytest-testmon>=2.1.3",
    "pre-commit>=4.3.0",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C90","S"]
ignore = ["E501"]  # 不按79检查行长，而是让formatter按照88检查

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # init里允许“import但不使用”
"tests/*" = ["S101"] # test里允许“assert”

[tool.mypy]
strict = true
warn_unused_configs = true
disallow_untyped_decorators = true

[[tool.mypy.overrides]]
module = ["tests", "tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]
