[project]
name = "j-file-kit"
version = "0.1.0"
description = "基于 Python 的文件管理工具，支持自定义规则的文件操作"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "loguru>=0.7.0",
    "requests>=2.33.0",
]

[project.scripts]
j-file-kit = "j_file_kit.main:main"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "ruff>=0.14.0",
    "pytest>=9.0.3",
    "pytest-cov>=4.0",
    "faker>=20.0",
    "types-PyYAML>=6.0",
    "types-requests>=2.32.0",
    "pytest-testmon>=2.1.3",
    "pre-commit>=4.3.0",
    "pytest-xdist>=3.8.0",
    "pip-audit>=2.9.0",
    "ty>=0.0.34",
]

[tool.uv]
constraint-dependencies = [
    "pygments>=2.20.0",  # CVE-2026-4539 fix
    "pip>=26.1",  # CVE-2026-3219 fix (wheel/sdist ambiguity)
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
force-exclude = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort-style import rules
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # bugbear
    "C90", # mccabe complexity
    "S",   # bandit (security)
    "ANN", # annotations (类型注解)
    "COM", # comma style
    "ERA", # commented-out code
    "TID", # tidy imports/names
]
ignore = [
    "E501", # 行宽交给 formatter (ruff format) 控制
    "COM812", # 与 ruff format 冲突（官方建议二者择一；尾随逗号交给 formatter）
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]          # 允许 __init__ 里存在“导出用”的 unused import
"tests/*" = ["S101", "ANN", "S603", "S607"]  # 测试里允许 assert、不写函数注解、以及调用外部子进程（如 docker）

[tool.pytest.ini_options]
testpaths = ["tests"]
# strict = true # 得等pytest-testmon支持pytest9之后才能开启
addopts = [
    "--strict-markers", # 开启 strict = true 之后可以移除
    "--strict-config", # 开启 strict = true 之后可以移除
    "--verbose",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "e2e: End-to-end tests against real Docker container (requires Docker running)",
]
